--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
   --color-blue: #e7f6ff;
   --color-green: #9dd458;
   --color-black: #232323;
+  --color-rose: #fef0f0;
 
   --wrapper-width: 1080px;
 
@@ -26,6 +27,17 @@ body {
   background-color: var(--color-blue);
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+  background-color: rgb(223, 223, 223);
+}
+
+::-webkit-scrollbar-thumb {
+  width: 4px;
+  border-radius: 8px;
+  background-color: var(--color-green);
+}
+
 button,
 input {
   font-family: var(--font-family);
@@ -40,6 +52,22 @@ a {
   border: none;
   outline: none;
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out,
+    transform 0.3s ease-in-out;
+
+  &--green {
+    background: var(--color-green);
+    border-radius: 18px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+    color: #ffffff;
+    &:hover {
+      background-color: #b0ee63;
+    }
+  }
+
   &--plus {
     padding: 10px;
     display: flex;
@@ -49,6 +77,32 @@ a {
     background: #ffffff;
     border: 1px solid #f2f2f2;
     border-radius: 8px;
+
+    &:hover {
+      background-color: rgb(223, 223, 223);
+    }
+  }
+
+  &--remove {
+    background: #ffffff;
+    border: 1px solid #dbdbdb;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    padding: 0px 10px;
+
+    & > svg {
+      background: #b5b5b5;
+      transform: rotate(45deg);
+    }
+
+    &:hover {
+      background-color: rgb(223, 223, 223);
+    }
   }
 }
 
@@ -162,18 +216,21 @@ ol {
 .wishlist {
   &-button {
     width: 32px;
-    height: 32px;
+    padding: 10px 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     border: none;
     outline: none;
+    background: #ffffff;
+    border: 1px solid #f8f8f8;
+    border-radius: 7px;
+    cursor: pointer;
+
     &--liked {
       background-color: var(--color-rose);
-    }
-    &--unliked {
-      background-color: #fff;
+      border: none;
     }
   }
 }
@@ -207,6 +264,13 @@ ol {
   background: #ffffff;
   border: 1px solid #f3f3f3;
   border-radius: 40px;
+  transition: box-shadow 0.1s ease-in-out, transform 0.1s ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.06);
+    transform: translateY(-5px);
+  }
 
   &-info {
     margin-top: 15px;
@@ -236,6 +300,117 @@ ol {
       font-weight: bold;
       font-size: 14px;
       color: var(--color-black);
+    }
+  }
+}
+
+.col {
+  flex-direction: column;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.drawer {
+  padding: 30px;
+  position: absolute;
+  width: 385px;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  background: #ffffff;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  &__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+  }
+  .cart {
+    margin-top: 30px;
+    flex: 1;
+    overflow: auto;
+    &-item {
+      padding: 30px 20px;
+      border: 2px solid #f3f3f3;
+      border-radius: 20px;
+      &:not(:last-child) {
+        margin-bottom: 20px;
+      }
+      &__image {
+        margin-right: 20px;
+        object-fit: contain;
+      }
+      &__title {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        margin-bottom: 8px;
+      }
+      &__price {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+      }
+      &__button {
+        margin-left: 12px;
+      }
+    }
+  }
+
+  .total {
+    &__button {
+      margin-top: 24px;
+      width: 100%;
+      padding: 18px 0px;
+      position: relative;
+
+      &:hover {
+        img {
+          transform: translateX(5px);
+        }
+      }
+
+      img {
+        position: absolute;
+        top: calc(calc(56px / 2) - 7px);
+        right: 30px;
+        transition: transform 0.15s ease-in-out;
+      }
+    }
+    &-item {
+      align-items: flex-end;
+
+      &:not(:last-child) {
+        margin-bottom: 20px;
+      }
+
+      &__title {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+      }
+
+      &__price {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+      }
+
+      .underline--dashed {
+        flex: 1;
+        height: 1px;
+        border-bottom: 1px dashed #dfdfdf;
+        position: relative;
+        top: -4px;
+        margin: 0px 8px;
+      }
     }
   }
 }
