--- a/src/index.scss
+++ b/src/index.scss
@@ -439,6 +439,53 @@ ol {
   }
 }
 
+.cartEmpty {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+
+  & > img {
+    margin-bottom: 20px;
+  }
+
+  &__title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+
+  &__text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    text-align: center;
+    color: #000000;
+    opacity: 0.4;
+    margin-bottom: 40px;
+  }
+
+  &__button {
+    padding: 18px 0;
+    width: 100%;
+    position: relative;
+    & > img {
+      top: calc(calc(56px / 2) - 7px);
+      position: absolute;
+      transform: rotate(180deg);
+      left: 50px;
+      transition: transform 0.15s ease-in-out;
+    }
+    &:hover {
+      & > img {
+        transform: translateX(-5px) rotate(180deg);
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 992px) {
   .cards {
     gap: 15px;
@@ -462,17 +509,17 @@ ol {
     }
   }
 
-  .search{
+  .search {
     width: 100%;
   }
 
-  .card{
+  .card {
     padding: 15px;
     border-radius: 20px;
-    &__title{
+    &__title {
       font-size: 12px;
     }
-    &__price{
+    &__price {
       font-size: 10px;
       & span {
         font-size: 12px;
@@ -481,20 +528,114 @@ ol {
   }
 }
 
-@media screen and (max-width: 576px){
+@media screen and (max-width: 576px) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
   }
   .nav {
     flex-direction: column;
-    &-logo{
+    &-logo {
       margin-bottom: 30px;
     }
   }
-  .wrapper{
+  .wrapper {
     margin: 0;
   }
-  .drawer{
+  .drawer {
     width: 100%;
+  }
+}
+
+.loader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.lds-roller {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: var(--color-green);
+  margin: -4px 0 0 -4px;
+}
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
